Update from laptop

--- a/public/views/partials/login.html
+++ b/public/views/partials/login.html
@@ -1,1 +1,10 @@
-LOGIN
+Log in:
+<br />
+<label for='username'>Gebruikersnaam:</label>
+<input type='text' id='username' name='username' />
+<br />
+<label for='password'>Wachtwoord:</label>
+<input type='password' id='password' name='password' />
+<br />
+<br />
+<div class="btn btn-primary" ng-click="User.login()">Log in</div>
